# blackhole

./: .gitignore  CALCULATIONS.md  CMakeLists.txt  README.md
include/: accretion_disk.hpp  black_hole.hpp  camera.hpp  renderer.hpp  scene.hpp  shader.hpp  skybox.hpp
shaders/: fullscreen.vert  raycast.frag
src/: camera.cpp  main.cpp  renderer.cpp  shader.cpp
